[metadata]
name = sleepness
description = When you require an sleepness session, use **sleepness**.
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Tolo Palmer
url=https://github.com/toloco/sleepness
license = MIT License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages =
    sleepness
install_requires =
    PyAutoGUI==0.9.54
    tqdm==4.66.1
python_requires = >=3.8
zip_safe = yes

[options.entry_points]
console_scripts =
    sleepness=sleepness.__main__:main

[options.extras_require]
testing =
    pytest==7.2.0

[devpi:upload]
formats = sdist.tgz,bdist_wheel
